--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "my-app",
+  "name": "next-components",
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "start": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -18,7 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -30,6 +34,8 @@
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "eslint": "^8.45.0",
+    "prettier": "^3.0.0"
   }
 }
