--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.6",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "dayjs": "^1.11.9"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
