--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drux-ui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A beautiful, reusable component library for React apps built with TailwindCSS",
   "author": "Shreesha Venkatram",
   "license": "MIT",
@@ -19,7 +19,8 @@
   "scripts": {
     "dev": "vite",
     "start": "vite --port 3000",
-    "build": "tsup src/index.ts --dts --format esm,cjs --out-dir dist",
+    "build": "vite build",
+    "build:lib": "tsup src/index.ts --dts --format esm,cjs --out-dir dist",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
