--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "emitDeclarationOnly": false,
       "outDir": "dist",
       "strict": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist", "build"]
