--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drux-ui",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A beautiful, reusable component library for React apps built with TailwindCSS",
   "author": "Shreesha Venkatram",
   "license": "MIT",
@@ -24,7 +24,9 @@
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepublishOnly": "cp README.npm.md README.md",
+    "postpublish": "git checkout README.md"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
