--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "drux-ui",
-  "version": "3.2.0",
+  "version": "4.2.0",
   "description": "A beautiful, reusable component library for React apps built with TailwindCSS",
   "author": "Shreesha Venkatram",
   "license": "MIT",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -35,7 +37,6 @@
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
     "dayjs": "^1.11.9",
-    "drux-ui": "^1.0.0",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
