fix: patch update for library usage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drux-ui",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "description": "A beautiful, reusable component library for React apps built with TailwindCSS",
   "author": "Shreesha Venkatram",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "start": "vite --port 3000",
     "build": "vite build",
     "build:lib": "tsup src/index.ts --dts --format esm,cjs --out-dir dist",
+    "prepack": "rimraf dist && npm run build:lib",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -54,6 +55,7 @@
     "eslint": "^8.45.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.0.0",
+    "rimraf": "^6.0.1",
     "tsup": "^7.2.0",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
