--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,21 @@
+# Ignore everything except dist/
 .vite
 node_modules
 coverage
 *.test.*
 *.spec.*
 *.map
+
 vite.config.*
 tsconfig.json
 postcss.config.js
 tailwind.config.js
-src/__tests__/
+
+src
 public
-src/App.jsx
-src/App.test.jsx
-src/main.jsx
+*.jsx
+*.tsx
+*.ts
+*.md
+__tests__/
+playground/
